Fix word wrap on full artist lists

--- a/static/style5/_detail.scss
+++ b/static/style5/_detail.scss
@@ -290,5 +290,7 @@ div.row {
 		clear: both;
 		padding-top: 2px;
 		padding-left: 50px;
+		white-space: normal;
+		word-break: normal;
 	}
 }
